--- a/style.css
+++ b/style.css
@@ -1,7 +1,69 @@
+body {
+  font-family: sans-serif;
+  background-color: #f9f7fe;
+}
+
 h1 {
   text-align: center;
+  font-size: 42px;
+  font-weight: 750;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 0;
+}
+
+select {
+  width: 100%;
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px;
 }
 
 footer {
   text-align: center;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+a {
+  color: rgb(200, 21, 21);
+}
+
+.container {
+  background-color: white;
+  max-width: 600px;
+  margin: 60px auto;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.6;
+  margin: 10px 0;
+  margin-bottom: 15px;
+}
+
+.time {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.time small {
+  font-size: 20px;
+  position: relative;
+  bottom: 6px;
 }
