--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: #f9f7fe;
+  background-color: #fbf8e2;
 }
 
 h1 {
@@ -23,12 +23,16 @@ select {
 
 footer {
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
   color: rgba(0, 0, 0, 0.7);
 }
 
 a {
   color: rgb(200, 21, 21);
+}
+
+span {
+  font-size: 20px;
 }
 
 .container {
@@ -37,13 +41,13 @@ a {
   margin: 60px auto;
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.3);
 }
 
 .city {
   display: flex;
   justify-content: space-between;
-  margin: 20px 0px;
+  margin: 30px 0px;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.5);
 }
 
